--- a/index.html
+++ b/index.html
@@ -5,10 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <div id="page-container">
+        <p id="tic-tac-text" class="wavy">Tic Tac Toe</p>
+        <div id="board">
+            <div class="space">
+                <button data-space-btn class="btn-letter"></button>
+            </div>
+            <div class="space">
+                <button data-space-btn class="btn-letter"></button>
+            </div>
+            <div class="space">
+                <button data-space-btn class="btn-letter"></button>
+            </div>
+            <div class="space">
+                <button data-space-btn class="btn-letter"></button>
+            </div>
+            <div class="space">
+                <button data-space-btn class="btn-letter"></button>
+            </div>
+            <div class="space">
+                <button data-space-btn class="btn-letter"></button>
+            </div>
+            <div class="space">
+                <button data-space-btn class="btn-letter"></button>
+            </div>
+            <div class="space">
+                <button data-space-btn class="btn-letter"></button>
+            </div>
+            <div class="space">
+                <button data-space-btn class="btn-letter"></button>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -18,6 +52,7 @@
 
 
 
+    <script src="scripts/uuidv4.js"></script>
     <script src="scripts/app.js"></script>
 </body>
 </html>
