--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="page-container">
-        <p id="tic-tac-text" class="wavy">Tic Tac Toe</p>
+        <p class="wavy text">Tic Tac Toe</p>
         <div id="board">
             <div class="space">
                 <button data-space-btn class="btn-letter"></button>
@@ -41,6 +41,9 @@
             <div class="space">
                 <button data-space-btn class="btn-letter"></button>
             </div>
+        </div>
+        <div data-winner-container id="winner-container">
+            <p data-winner class="text"></p>
         </div>
     </div>
 
