--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div id="page-container">
+    <div data-main class="page-container">
         <p class="wavy text">Tic Tac Toe</p>
+        <!-- <div data-turn-container id="display-turn-container">
+            <p data-display-turn id="display-turn"></p>
+        </div> -->
+        <button data-new-game class="new-game-btn">New Game</button>
         <div id="board">
             <div class="space">
                 <button data-space-btn class="btn-letter"></button>
