cleaned up a little bit of the code. Made a couple visual changes.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 </head>
 <body>
     <div data-main class="page-container">
-        <p class="wavy text">Tic Tac Toe</p>
+        <header>
+            <p class="wavy main-text">Tic Tac Toe</p>
+        </header>
         <!-- <div data-turn-container id="display-turn-container">
             <p data-display-turn id="display-turn"></p>
         </div> -->
-        <button data-new-game class="new-game-btn">New Game</button>
         <div id="board">
             <div class="space">
                 <button data-space-btn class="btn-letter"></button>
@@ -49,6 +50,7 @@
         <div data-winner-container id="winner-container">
             <p data-winner class="text"></p>
         </div>
+        <button data-new-game class="new-game-btn">New Game</button>
     </div>
 
 
