Final version aside from attempting creating an AI. Changed the font style so it's cleaner. Also added a header to fancy it up.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tic Tac Toe</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -15,9 +15,6 @@
         <header>
             <p class="wavy main-text">Tic Tac Toe</p>
         </header>
-        <!-- <div data-turn-container id="display-turn-container">
-            <p data-display-turn id="display-turn"></p>
-        </div> -->
         <div id="board">
             <div class="space">
                 <button data-space-btn class="btn-letter"></button>
